[metadata]
name = fstorage
version = attr: fstorage.__version__
author = Ilya Antonov
author_email = ispanelki@gmail.com
description = Fstorage, Secure file storage, SYNC/ASYNC clients, easy to learn, fast to code.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    file
    files
    storage
    security
    sync
    synch
    async
    asynch
    server
    client
    fastapi
    aiohttp
    requests
license = MIT License (MIT)
license_files = LICENSE
url = https://github.com/ispaneli/fstorage
project_urls =
    Issue Tracker = https://github.com/ispaneli/fstorage/issues
    Source = https://github.com/ispaneli/fstorage/tree/master/src/fstorage
    Say Thanks! = http://saythanks.io/to/ispanelki
    Documentation = https://github.com/ispaneli/fstorage
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: AnyI
    Framework :: FastAPI
    Framework :: aiohttp
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Communications :: File Sharing
    Topic :: Database
    Topic :: Database :: Database Engines/Servers
    Topic :: Internet
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System
    Topic :: System :: Filesystems
    Typing :: Type

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7, <4
install_requires =
    python-multipart >= 0.0.6
    uvicorn >= 0.21.0
    fastapi >= 0.94.0
    sqlmodel >= 0.0.8
    asyncpg >= 0.27.0
    greenlet >= 2.0.2
    requests >= 2.28.2
    aiohttp >= 3.8.4

[options.extras_require]
server =
    python-multipart >= 0.0.6
    uvicorn >= 0.21.0
    fastapi >= 0.94.0
    sqlmodel >= 0.0.8
    asyncpg >= 0.27.0
    greenlet >= 2.0.2
sync_client =
    requests >= 2.28.2
async_client =
    aiohttp >= 3.8.4

[options.packages.find]
where = src
